--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "react-crash",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://starjoon.github.io/task-tracker",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.1.0",
+    "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
